Feat: Alterado o script do frontend da página de forms. Pequenas alterações em outros arquivos
