# backend/src/controllers/reagenteController.js
@@ -46,7 +46,9 @@ export const getReagente = async (req, res, next) => {
     #swagger.responses[200]
     */
     try {
-        const reagente = await Reagente.findOne(req.params);
+        let reagente = await Reagente.findOne(req.params);
+
+        reagente._doc.nearLimit = reagente.quantidade <= (reagente.limiteMin * 1.2);
 
         res.hateoasItem(reagente);
     } catch (err) {
@@ -60,19 +62,42 @@ export const listReagentes = async (req, res, next) => {
     #swagger.responses[200]
     */
     try {
-        const {_page, _size, _order, ...filter } = req.query;
+        let { _page, _size, _order, filter, ...rest } = req.query;
         const page = parseInt(_page) || 1;
         const size = parseInt(_size) || 10;
 
         const offset = (page - 1) * size;
 
-        const reagentes = await Reagente
-            .find(filter)
+        let filterObj = {};
+        if (filter) {
+            filter.split(',').forEach(pair => {
+                const [key, value] = pair.split('=');
+                if (key && value) filterObj[key] = value;
+            });
+        }
+        filterObj = { ...filterObj, ...rest };
+
+        const fields = [
+            'codigo', 'reagente', 'unidadeMedida', 'situacao', 'fornecedor', 'localizacao'
+        ];
+        Object.keys(filterObj).forEach(key => {
+            if (fields.includes(key)) {
+                filterObj[key] = { $regex: filterObj[key], $options: 'i' };
+            }
+        });
+
+        let reagentes = await Reagente
+            .find(filterObj)
             .skip(offset)
             .limit(size)
-            .sort(_order)
+            .sort(_order);
 
-        const totalData = await Reagente.countDocuments();
+        reagentes = reagentes.map(reagente => {
+            reagente._doc.nearLimit = reagente.quantidade <= (reagente.limiteMin * 1.2);
+            return reagente;
+        });
+
+        const totalData = await Reagente.countDocuments(filterObj);
         const totalPages = Math.ceil(totalData / size);
 
         res.hateoasList(reagentes, totalPages);
@@ -93,7 +118,7 @@ export const updateReagente = async (req, res, next) => {
    try {
         const { codigo, reagente, quantidade, dataRecebido, unidadeMedida, valorUnitario, fornecedor, lote, validade, situacao, localizacao, armario, prateleira, solicitante, limiteMin, limiteMax } = req.body;
 
-        const valorTotal = valorUnitario * quantidade;
+        const valorTotal = valorUnitario * quantidade || await Reagente.findOne(req.params).valorTotal;
 
         const newReagente = await Reagente.findOneAndUpdate(req.params, {
             codigo,
@@ -165,7 +190,7 @@ export const listNamesAndCodes = async (req, res, next) => {
     try {
         const reagentes = await Reagente.find({ status: 1 }, { codigo: 1, reagente: 1, _id: 0 });
 
-        res.ok(reagentes);
+        res.ok({reagentes: reagentes});
     } catch (err) {
         next(err);
     }
