# backend/src/routes/reagenteRouter.js
@@ -13,14 +13,15 @@ import {
 } from '../controllers/reagenteController.js';
 
 import validator from '../middlewares/validator.js';
+import schemaEdit from './validators/reagenteEditValidator.js';
 import schema from './validators/reagenteValidator.js';
 
 const router = Router();
 router.get('/', listReagentes);
-router.get('/forms', listNamesAndCodes);
 router.get('/:_id', getReagente);
 router.post('/', validator(schema), createReagente);;
-router.put('/:_id', validator(schema), updateReagente);
+router.put('/:_id', validator(schemaEdit), updateReagente);
+router.get('/forms', listNamesAndCodes);
 router.delete('/:_id', deleteReagente);
 router.patch('/:_id', updateStatus);
 router.post('/add', addToStock);
